[package]
authors = ["Maiddog <maiddogsrl@gmail.com>", "BeaconBrigade <beaconbrigade@gmail.com>"]
description = "A Rust libary for handling Bluetooth Polar heart rate monitors"
documentation = "https://docs.rs/arctic"
homepage = "https://github.com/Roughsketch/arctic"
keywords = ["polar", "bluetooth", "heartrate"]
license = "MIT"
name = "arctic"
readme = "README.md"
repository = "https://github.com/Roughsketch/arctic.git"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "arctic"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
async-trait = "0.1"
btleplug = "0.9"
chrono = "0.4"
futures = "0.3"
prost = "0.11.9"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1.0.40"
tokio = { version = "1.10.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"]}
tracing = "0.1.37"
uuid = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
prost-build = "0.11.9"
